[package]
name = "ark-snark"
version = "0.3.0"
authors = [ "arkworks contributors" ]
description = "A library for SNARK traits"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/snark"
documentation = "https://docs.rs/ark-snark/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-std = { git = "https://github.com/ChorusOne/ark-std", branch = "giulio/random_feature", default-features = false }
ark-ff = { git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
ark-relations = {path = "../relations", default-features = false }
